# liquidhaskell-cabal-demo

./: .gitignore  README.md  Setup.hs  liquidhaskell-cabal-demo.cabal  stack.yaml
app/: FFI.hs  Unchecked.hs
app/Checked/: X1.hs  X2.hs
src/: A.hs  C.hs
