name:                     liquidhaskell-cabal-demo
version:                  0.1.0.0
synopsis:                 Demo of Liquid Haskell integration for Cabal and Stack
description:              Please see README.md
homepage:                 https://github.com/spinda/liquidhaskell-cabal-demo#readme
license:                  BSD3
license-file:             LICENSE
author:                   Michael Smith
maintainer:               michael@spinda.net
copyright:                2016 Michael Smith
category:                 Development
cabal-version:            >=1.10
build-type:               Custom

--custom-setup
--  setup-depends:           base, Cabal, liquidhaskell-cabal

flag liquidhaskell
  description:             After building, verify with LiquidHaskell
  default:                 False

library
  exposed-modules:         A, B, C
  build-depends:           base >=4.8 && <4.9
  hs-source-dirs:          src
  default-language:        Haskell2010
  default-extensions:      TupleSections
  x-liquidhaskell-options: --diff --no-termination

executable ffi
  main-is:                 FFI.hs
  build-depends:           base >=4.8 && <4.9
  hs-source-dirs:          app
  default-language:        Haskell2010
  default-extensions:      ForeignFunctionInterface
  include-dirs:            include
  c-sources:               include/foo.c
  x-liquidhaskell-options: --diff

